# story-programming-language

./: .gitignore  CMakeLists.txt  Constants.h  Exceptions.h  Interpreter.h  Parser.h  README.md  Transpiler.h  Util.h  code.txt  exceptions.h  index.html  main.cpp  main.js  main.wasm  numbers.txt  tutorial.txt
SyntaxNodes/: AdditionNode.h  DivisionNode.h  ElseNode.h  ForNode.h  FunctionCallNode.h  FunctionDeclarationNode.h  IfNode.h  MultiplicationNode.h  Node.h  ReadNode.h  SayNode.h  SubtractionNode.h  VariableNode.h
public/: index.html  index.js  style.css  tutorial.html
